<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#c2ffffff"
    android:layout_height="match_parent"
    tools:context=".About">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#c2ffffff"
        android:layout_height="match_parent">



        <Space
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <LinearLayout
            android:id="@+id/header"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spacer"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher_round" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/header"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:fontFamily="casual" />

        </LinearLayout>

        <Space

            android:id="@+id/spacer2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/header" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer2"
            android:gravity="center"
            android:text="@string/whatismyfarm"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:fontFamily="cursive" />

        <Space
            android:id="@+id/spacer3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_below="@id/spacer3"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright" />

        <Space
            android:id="@+id/spacer4"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer4"
            android:gravity="center"
            android:text="@string/members"
            android:typeface="monospace" />

        <Space
            android:id="@+id/spacer5"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer5"
            android:gravity="center"
            android:text="@string/version"
            android:textColor="@color/colorPrimaryDark"
            android:typeface="serif"
            app:fontFamily="sans-serif-smallcaps" />



    </RelativeLayout>




</ScrollView>